--- a/SalesOrders-DQ-Check.ipynb
+++ b/SalesOrders-DQ-Check.ipynb
@@ -8,7 +8,7 @@
         "from pyspark.sql import SparkSession\r\n",
         "from pyspark import SparkContext, SparkConf\r\n",
         "from pyspark.sql import functions as F\r\n",
-        "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\r\n",
+        "from pyspark.sql.types import StructType, StructField, StringType, IntegerType, TimestampType, DateType\r\n",
         "\r\n",
         "\r\n",
         "def get_null_perc(spark, df, null_cols):\r\n",
